oslo-sphinx (4.7.0-1) UNRELEASED; urgency=medium

  * New upstream release

 -- Ondřej Nový <onovy@debian.org>  Fri, 05 Aug 2016 22:31:20 +0200

oslo-sphinx (4.6.0-1) experimental; urgency=medium

  * Team upload.
  * New upstream release
  * Rebased d/p/move_theme.patch
  * Added d/p/fixed_attribute_error.patch

 -- Ondřej Nový <onovy@debian.org>  Mon, 18 Jul 2016 21:24:29 +0200

oslo-sphinx (4.4.0-1) experimental; urgency=medium

  * Team upload

  [ Corey Bryant ]
  * New upstream release.
  * d/gbp.conf: Update branch for Newton.
  * d/control: Align (Build-)Depends with upstream.

  [ Ondřej Nový ]
  * Added Python3 version
  * Moved theme to python-oslosphinx-common package
  * Bumped openstack-pkg-tools required version to 51
  * Enabled autopkgtest-pkg-python testsuite
  * Use extend-diff-ignore to ignore egg-info
  * Rebased d/p/remove-google-analytics.patch

 -- Ondřej Nový <onovy@debian.org>  Sat, 16 Jul 2016 15:50:43 +0200

oslo-sphinx (4.3.0-1) unstable; urgency=medium

  * Team upload.

  [ David Della Vecchia ]
  * New upstream release (Closes: #820682).
  * d/control: Align depends with upstream.
  * d/p/fix-exception-in-checking-git-remote-url.patch: Removed,
    fixed upstream.

  [ Ondřej Nový ]
  * Fixed VCS URLs (https).
  * Added simple Debian test.
  * d/copyright
    - Rearranged order of d/copyright.
    - Added myself of Debian part.
  * Standards-Version is 3.9.8 now (no change).
  * Changed upstream git URL to https schema.

 -- Ondřej Nový <novy@ondrej.org>  Fri, 29 Apr 2016 12:21:43 +0200

oslo-sphinx (4.0.0-2) unstable; urgency=medium

  * Uploading to unstable.
  * Adding myself to uploaders list.

 -- Ivan Udovichenko <iudovichenko@mirantis.com>  Mon, 04 Apr 2016 11:05:25 +0300

oslo-sphinx (4.0.0-1) experimental; urgency=medium

  [ Corey Bryant ]
  * New upstream release.
  * d/control: Align dependencies with upstream.
  * d/gbp.conf: Update debian-branch to debian/liberty.
  * d/control: Update uploaders.

  [ Thomas Goirand ]