@@ -5,7 +5,7 @@ Last-Update: 2015-11-26
 
 --- a/oslosphinx/theme/openstack/layout.html
 +++ b/oslosphinx/theme/openstack/layout.html
-@@ -105,10 +105,6 @@
+@@ -106,10 +106,6 @@
  {% block footer %}
  {{ super() }}
  <script type="text/javascript">
