@@ -1,6 +1,7 @@
 oslo-sphinx (4.7.0-1) UNRELEASED; urgency=medium
 
   * New upstream release
+  * Rebased d/p/fixed_attribute_error.patch
 
  -- Ondřej Nový <onovy@debian.org>  Fri, 05 Aug 2016 22:31:20 +0200
 
